libdrm (2.4.46-3) UNRELEASED; urgency=low

  * Make drmCheckModesettingSupported work on FreeBSD.  Thanks, Christoph
    Egger!

 -- Julien Cristau <jcristau@debian.org>  Thu, 19 Sep 2013 21:13:52 +0200

libdrm (2.4.46-2) unstable; urgency=low

  * Build libdrm-radeon1 on kfreebsd (closes: #684593).

 -- Julien Cristau <jcristau@debian.org>  Wed, 21 Aug 2013 21:05:44 +0200

libdrm (2.4.46-1) unstable; urgency=low

  [ Sven Joachim ]
  * New upstream release.
  * Bump libdrm2's and libdrm-intel1's symbols and shlibs.
  * Build libdrm-intel1 on x32 (Closes: #712515).
  * Disable silent rules.

 -- Maarten Lankhorst <maarten.lankhorst@ubuntu.com>  Mon, 05 Aug 2013 13:44:46 +0200

libdrm (2.4.45-3) unstable; urgency=low

  * Team upload.

  * debian/patches/03_build_against_librt.diff:
    + Removed, no longer needed with our current glibc version.
      Thanks to Julien Cristau for pointing it out.
  * Upload to unstable.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Thu, 06 Jun 2013 23:13:12 +0200

libdrm (2.4.45-2) experimental; urgency=low

  [ Sven Joachim ]
  * Only build-depend on valgrind on architectures where
    valgrind is actually available.

 -- Julien Cristau <jcristau@debian.org>  Thu, 30 May 2013 10:03:37 +0200

libdrm (2.4.45-1) experimental; urgency=low

  * Team upload.

  [ Julien Cristau ]
  * Bump libdrm2 shlibs to 2.4.38.

  [ Maarten Lankhorst ]
  * New upstream release.
  * Build-depend on xsltproc and docbook-xsl.
  * Add valgrind to build-depends.

  [ Timo Aaltonen ]
  * control: Bump policy to 3.9.4, no changes.

  [ Emilio Pozuelo Monfort ]
  * Upload to experimental.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Thu, 16 May 2013 00:09:59 +0200

libdrm (2.4.40-1) experimental; urgency=low

  [ Maarten Lankhorst ]
  * New upstream release.
    - Nouveau ABI change, replace libdrm-nouveau1a with libdrm-nouveau2.

  [ Timo Aaltonen ]
  * Bump libdrm-intel1's and libdrm-nouveau2's shlibs due to new symbols.