@@ -29,7 +29,6 @@ Depends:
  libdrm-radeon1 (= ${binary:Version}),
  libdrm-nouveau2 (= ${binary:Version}) [linux-any],
  libdrm-omap1 (= ${binary:Version}) [any-arm],
- libkms1 (= ${binary:Version}) [linux-any],
  ${misc:Depends},
 Replaces:
  linux-libc-dev (<< 2.6.32-10)
@@ -173,28 +172,6 @@ Description: Userspace interface to radeon-specific kernel DRM services -- debug
  Linux to provide hardware-accelerated OpenGL drivers.
  .
  This package provides the debugging symbols for the libdrm-radeon1 package.
-
-Package: libkms1
-Section: libs
-Architecture: linux-any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Multi-Arch: same
-Pre-Depends: ${misc:Pre-Depends}
-Description: Userspace interface to kernel DRM buffer management
- This library implements a unified userspace interface to the different buffer
- management interfaces of the kernel DRM hardware drivers.
-
-Package: libkms1-dbg
-Section: debug
-Priority: extra
-Architecture: linux-any
-Depends: libkms1 (= ${binary:Version}), ${misc:Depends}
-Multi-Arch: same
-Description: Userspace interface to kernel DRM buffer management -- debugging symbols
- This library implements a unified userspace interface to the different buffer
- management interfaces of the kernel DRM hardware drivers.
- .
- This package provides the debugging symbols for the libkms1 package.
 
 Package: libdrm-omap1
 Section: libs
