@@ -1,16 +1,0 @@
-libkms.so.1 libkms1 #MINVER#
-| libkms-private
- dumb_create@Base 0 1
- intel_create@Base 0 1
- kms_bo_create@Base 0
- kms_bo_destroy@Base 0
- kms_bo_get_prop@Base 0
- kms_bo_map@Base 0
- kms_bo_unmap@Base 0
- kms_create@Base 0
- kms_destroy@Base 0
- kms_get_prop@Base 0
- linux_create@Base 0 1
- nouveau_create@Base 0 1
- radeon_create@Base 2.4.24 1
- vmwgfx_create@Base 0 1
