@@ -8,20 +8,19 @@
 DEB_HOST_ARCH_OS  ?= $(shell dpkg-architecture -qDEB_HOST_ARCH_OS)
 DEB_HOST_ARCH_CPU ?= $(shell dpkg-architecture -qDEB_HOST_ARCH_CPU)
 
-confflags = --enable-radeon
+confflags = \
+	--enable-radeon \
+	--disable-libkms \
+	$()
 
 # Linux vs. the rest:
 ifeq (linux, $(DEB_HOST_ARCH_OS))
 	confflags += --enable-udev
-	confflags += --enable-libkms
-	LIBKMS = yes
 	confflags += --enable-vmwgfx
 	confflags += --enable-nouveau
 	NOUVEAU = yes
 else
 	confflags += --disable-udev
-	confflags += --disable-libkms
-	LIBKMS = no
 	confflags += --disable-vmwgfx
 	confflags += --disable-nouveau
 	NOUVEAU = no
@@ -80,9 +79,6 @@ endif
 ifeq ($(OMAP), yes)
 	dh_strip -plibdrm-omap1 --dbg-package=libdrm-omap1-dbg
 endif
-ifeq ($(LIBKMS), yes)
-	dh_strip -p libkms1 --dbg-package=libkms1-dbg
-endif
 	dh_strip -s --remaining-packages
 
 override_dh_makeshlibs:
@@ -96,9 +92,6 @@ endif
 	dh_makeshlibs -plibdrm-radeon1 -V'libdrm-radeon1 (>= 2.4.39)' -- -c4
 ifeq ($(OMAP), yes)
 	dh_makeshlibs -plibdrm-omap1 -V'libdrm-omap1 (>= 2.4.38)' -- -c4
-endif
-ifeq ($(LIBKMS), yes)
-	dh_makeshlibs -plibkms1 -V'libkms1' -- -c4
 endif
 
 %:
